YAML Repositoryの設定値取得処理を共通Readerへ移行